# alpha

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.bat  setup.sh
AlphaEngine/: CMakeLists.txt
AlphaEngine/Content/Models/: unitsphere.am
AlphaEngine/Content/Shaders/: dx_deferred_ps.hlsl  dx_deferred_vs.hlsl  dx_lighting_ps.hlsl  dx_lighting_vs.hlsl  dx_ps_light.hlsl  dx_ps_normal.hlsl  dx_vs_light.hlsl  dx_vs_normal.hlsl  gl_deferred_ps.glsl  gl_deferred_vs.glsl  gl_dirlight_ps.glsl  gl_lighting_ps.glsl  gl_lighting_vs.glsl  gl_pointlight_ps.glsl  gl_ps_light.glsl  gl_ps_normal.glsl  gl_vs_normal.glsl
AlphaEngine/Include/: AlphaController.h  AlphaObject.h  AlphaSystem.h
AlphaEngine/Include/AppLayer/: AppLayer.h
AlphaEngine/Include/Assets/: Asset.h  AssetSystem.h
AlphaEngine/Include/Audio/: AudioMixer.h  AudioSystem.h  Sound.h
AlphaEngine/Include/Entities/: CameraComponent.h  Entity.h  EntityComponent.h  EntityFactory.h  EntityManager.h  EntityScript.h  LightComponent.h  MeshComponent.h  PrimitiveComponent.h  TransformComponent.h
AlphaEngine/Include/Events/: AEvent.h  AlphaEvent.h  Event.h  EventData.h  EventDataPublisher.h  EventDataSubscriber.h  EventData_EntityCreated.h  EventData_HIDKeyAction.h  EventData_SetActiveCamera.h  EventData_ThreadTaskCreated.h  EventInterface.h  EventManager.h  EventReceiver.h  EventSystem.h
AlphaEngine/Include/FSA/: GameState.h  State.h  StateMachine.h
AlphaEngine/Include/Graphics/: ARenderPass.h  Camera.h  GraphicsSystem.h  IRenderer.h  Light.h  Material.h  Mesh.h  Model.h  ModelFile.h  RenderDataTask.h  RenderSet.h  RenderWindow.h  SceneManager.h  SceneNode.h
AlphaEngine/Include/HID/: HIDConstants.h  HIDContext.h  HIDContextManager.h  HIDPlatformTranslator.h  HIDSystem.h  HIDSystemEvents.h  HIDTypes.h
AlphaEngine/Include/Logic/: LogicSystem.h  LogicSystemEvents.h  Task_UpdateEntity.h
AlphaEngine/Include/Math/: Constants.h  Matrix.h  Quaternion.h  Transform.h  Vector2.h  Vector3.h  Vector4.h
AlphaEngine/Include/Scripting/: LuaScript.h  LuaVar.h
AlphaEngine/Include/Threading/: ATask.h  Task.h  TaskRunner.h  ThreadPool.h  ThreadSystem.h  ThreadSystemEvents.h
AlphaEngine/Include/Toolbox/: ConcurrentQueue.h  Logger.h
AlphaEngine/Include/Unix/Graphics/: ARenderPass.h  GeometryPass.h  GraphicsRenderer.h  LightingPass.h  RenderData.h  RenderWindow.h  Renderable.h
AlphaEngine/Include/Unix/HID/: HIDConstants.h  HIDPlatformTranslator.h  HIDWindowListener.h
AlphaEngine/Include/Unix/Math/: Matrix.h  Quaternion.h  Vector3.h  Vector4.h
AlphaEngine/Include/Unix/Toolbox/: FileSystem.h  uuid.h
AlphaEngine/Include/Win32/Graphics/: ARenderPass.h  GeometryPass.h  GraphicsRenderer.h  GraphicsWindow.h  LightingPass.h  RenderData.h  Renderable.h
AlphaEngine/Include/Win32/HID/: HIDConstants.h  HIDPlatformTranslator.h  HIDWindowListener.h
AlphaEngine/Include/Win32/Math/: Matrix.h  Matrix_Conversions.h  Quaternion.h  Vector3.h  Vector4.h
AlphaEngine/Include/Win32/Toolbox/: FileSystem.h  uuid.h
AlphaEngine/Source/: AlphaController.cpp  AlphaSystem.cpp
AlphaEngine/Source/AppLayer/: AppLayer.cpp
AlphaEngine/Source/Assets/: Asset.cpp  AssetSystem.cpp
AlphaEngine/Source/Audio/: AudioMixer.cpp  AudioSystem.cpp  Sound.cpp
AlphaEngine/Source/Entities/: CameraComponent.cpp  Entity.cpp  EntityComponent.cpp  EntityFactory.cpp  EntityManager.cpp  EntityScript.cpp  LightComponent.cpp  MeshComponent.cpp  PrimitiveComponent.cpp  TransformComponent.cpp
AlphaEngine/Source/Events/: AEvent.cpp  AlphaEvent.cpp  Event.cpp  EventData.cpp  EventData_EntityCreated.cpp  EventData_HIDKeyAction.cpp  EventData_SetActiveCamera.cpp  EventData_ThreadTaskCreated.cpp  EventInterface.cpp  EventManager.cpp  EventReceiver.cpp  EventSystem.cpp
AlphaEngine/Source/FSA/: GameState.cpp  State.cpp  StateMachine.cpp
AlphaEngine/Source/Graphics/: Camera.cpp  GraphicsSystem.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelFile.cpp  RenderDataTask.cpp  RenderSet.cpp  RenderWindow.cpp  SceneManager.cpp  SceneNode.cpp
AlphaEngine/Source/HID/: HIDContext.cpp  HIDContextManager.cpp  HIDPlatformTranslator.cpp  HIDSystem.cpp  HIDSystemEvents.cpp  HIDTypes.cpp  HIDWindowListener.cpp
AlphaEngine/Source/Logic/: LogicSystem.cpp  LogicSystemEvents.cpp  Task_UpdateEntity.cpp
AlphaEngine/Source/Math/: Matrix.cpp  Quaternion.cpp  Transform.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
AlphaEngine/Source/Scripting/: LuaScript.cpp  LuaVar.cpp
AlphaEngine/Source/Threading/: ATask.cpp  Task.cpp  TaskRunner.cpp  ThreadPool.cpp  ThreadSystem.cpp  ThreadSystemEvents.cpp
AlphaEngine/Source/Unix/Graphics/: .GraphicsRenderer.cpp.swp  ARenderPass.cpp  GeometryPass.cpp  GraphicsRenderer.cpp  LightingPass.cpp  RenderData.cpp  RenderWindow.cpp  Renderable.cpp
AlphaEngine/Source/Unix/HID/: HIDPlatformTranslator.cpp  HIDWindowListener.cpp
AlphaEngine/Source/Unix/Math/: Matrix.cpp  Quaternion.cpp  Vector3.cpp
AlphaEngine/Source/Unix/Toolbox/: FileSystem.cpp  uuid.cpp
AlphaEngine/Source/Win32/Graphics/: ARenderPass.cpp  GeometryPass.cpp  GraphicsRenderer.cpp  GraphicsWindow.cpp  LightingPass.cpp  RenderData.cpp  Renderable.cpp
AlphaEngine/Source/Win32/HID/: HIDPlatformTranslator.cpp  HIDWindowListener.cpp
AlphaEngine/Source/Win32/Math/: Matrix.cpp  Matrix_Conversions.cpp  Quaternion.cpp  Vector3.cpp  Vector4.cpp
AlphaEngine/Source/Win32/Toolbox/: FileSystem.cpp  uuid.cpp
Demos/: CMakeLists.txt
Demos/Content/Entities/: camera.lua  cube.lua  directional_light.lua  light.lua  test.lua
Demos/Content/Materials/: bronze.lua  emerald.lua  lightyellow.lua
Demos/Content/Shaders/: Basic_PS.glsl  Basic_PS.hlsl  Basic_VS.glsl  Basic_VS.hlsl
Demos/Demo-0001-Blank/: CMakeLists.txt
Demos/Demo-0001-Blank/Include/Logic/: GameLogic.h  GameState.h
Demos/Demo-0001-Blank/Source/: main.cpp
Demos/Demo-0001-Blank/Source/Logic/: GameLogic.cpp  GameState.cpp
Demos/Demo-0002-Lights/: CMakeLists.txt
Demos/Demo-0002-Lights/Source/: main.cpp
Demos/DemoBasic/: CMakeLists.txt
Demos/DemoBasic/Content/Entities/: cube.lua  (+1 more)
Demos/DemoBasic/Source/: main.cpp
(+16 files in other folders)
